"""
Database models for the Enterprise AI Research Agent.

This is the persistent "Data & Knowledge Layer" required by the challenge brief.
We use SQLite via SQLAlchemy so the knowledge base survives app restarts with
zero external infrastructure (no DB server to install/host) while still being
a real relational schema, not a in-memory dict.

Schema shape:

    ResearchTopic (a research question submitted by a user)
        -> SubQuestion (decomposed by the Classifier/Planner agent)
            -> Source (a web page found by the Search agent)
                -> Finding (a structured claim extracted from that source)
    Finding <-> Finding contradiction links (detected by the Evidence agent)
    Conclusion (generated by the Synthesis agent, linked to the Findings that support it)
"""

from datetime import datetime, timezone
from sqlalchemy import (
    Column, Integer, String, Text, ForeignKey, DateTime, Float, Table
)
from sqlalchemy.orm import declarative_base, relationship

Base = declarative_base()


def utcnow():
    return datetime.now(timezone.utc)


# Many-to-many: a Conclusion can be supported by many Findings, and a Finding
# can support many Conclusions.
conclusion_findings = Table(
    "conclusion_findings",
    Base.metadata,
    Column("conclusion_id", Integer, ForeignKey("conclusions.id"), primary_key=True),
    Column("finding_id", Integer, ForeignKey("findings.id"), primary_key=True),
)


class ResearchTopic(Base):
    """A research question submitted to the agent, e.g.
    'How is AI transforming retail operations?'"""

    __tablename__ = "research_topics"

    id = Column(Integer, primary_key=True)
    question = Column(Text, nullable=False)
    domain = Column(String(255), nullable=True)          # filled by Classifier agent
    status = Column(String(50), default="pending")        # pending/running/done/failed
    created_at = Column(DateTime, default=utcnow)
    completed_at = Column(DateTime, nullable=True)

    sub_questions = relationship("SubQuestion", back_populates="topic", cascade="all, delete-orphan")
    conclusions = relationship("Conclusion", back_populates="topic", cascade="all, delete-orphan")
    contradictions = relationship("Contradiction", back_populates="topic", cascade="all, delete-orphan")
    pipeline_events = relationship("PipelineEvent", back_populates="topic", cascade="all, delete-orphan")


class SubQuestion(Base):
    """A focused sub-question the Classifier/Planner agent breaks the main
    research question into, so search + extraction stay targeted."""

    __tablename__ = "sub_questions"

    id = Column(Integer, primary_key=True)
    topic_id = Column(Integer, ForeignKey("research_topics.id"), nullable=False)
    text = Column(Text, nullable=False)

    topic = relationship("ResearchTopic", back_populates="sub_questions")
    sources = relationship("Source", back_populates="sub_question", cascade="all, delete-orphan")


class Source(Base):
    """A web page found by the Search agent for a given sub-question."""

    __tablename__ = "sources"

    id = Column(Integer, primary_key=True)
    sub_question_id = Column(Integer, ForeignKey("sub_questions.id"), nullable=False)
    url = Column(Text, nullable=False)
    title = Column(Text, nullable=True)
    raw_text = Column(Text, nullable=True)     # extracted page text (truncated)
    published_date = Column(String(64), nullable=True)  # publisher date when available
    fetched_at = Column(DateTime, default=utcnow)

    sub_question = relationship("SubQuestion", back_populates="sources")
    findings = relationship("Finding", back_populates="source", cascade="all, delete-orphan")
    timeline_events = relationship("TimelineEvent", back_populates="source", cascade="all, delete-orphan")


class TimelineEvent(Base):
    """A dated, source-backed milestone extracted from a source page.

    Event dates are only stored when the source text provides an explicit date
    or year. The impact level is a transparent research judgement for ranking
    the timeline, not a claim about a measured market return.
    """

    __tablename__ = "timeline_events"

    id = Column(Integer, primary_key=True)
    source_id = Column(Integer, ForeignKey("sources.id"), nullable=False)
    event_date = Column(String(64), nullable=False)
    title = Column(Text, nullable=False)
    description = Column(Text, nullable=True)
    event_type = Column(String(64), default="milestone")
    impact_level = Column(String(20), default="medium")
    impact_rationale = Column(Text, nullable=True)
    created_at = Column(DateTime, default=utcnow)

    source = relationship("Source", back_populates="timeline_events")


class Finding(Base):
    """A single structured claim extracted from a Source by the Extraction agent."""

    __tablename__ = "findings"

    id = Column(Integer, primary_key=True)
    source_id = Column(Integer, ForeignKey("sources.id"), nullable=False)
    claim = Column(Text, nullable=False)
    detail = Column(Text, nullable=True)
    # classification set by the Evidence agent: "corroborated" / "single_source" / "contested"
    classification = Column(String(50), default="single_source")
    confidence = Column(Float, default=0.5)

    source = relationship("Source", back_populates="findings")
    conclusions = relationship(
        "Conclusion", secondary=conclusion_findings, back_populates="findings"
    )


class Conclusion(Base):
    """A final synthesized conclusion, always traceable back to the Findings
    (and therefore Sources) that support it."""

    __tablename__ = "conclusions"

    id = Column(Integer, primary_key=True)
    topic_id = Column(Integer, ForeignKey("research_topics.id"), nullable=False)
    text = Column(Text, nullable=False)
    created_at = Column(DateTime, default=utcnow)

    topic = relationship("ResearchTopic", back_populates="conclusions")
    findings = relationship(
        "Finding", secondary=conclusion_findings, back_populates="conclusions"
    )


class Contradiction(Base):
    """A detected disagreement between two Findings from different sources,
    as identified by the Evidence agent. Stored as a real row (not just a
    log line) so contradictions are queryable and traceable data, not
    prose buried in a pipeline event log."""

    __tablename__ = "contradictions"

    id = Column(Integer, primary_key=True)
    topic_id = Column(Integer, ForeignKey("research_topics.id"), nullable=False)
    finding_id_a = Column(Integer, ForeignKey("findings.id"), nullable=False)
    finding_id_b = Column(Integer, ForeignKey("findings.id"), nullable=False)
    explanation = Column(Text, nullable=True)
    created_at = Column(DateTime, default=utcnow)

    topic = relationship("ResearchTopic", back_populates="contradictions")
    finding_a = relationship("Finding", foreign_keys=[finding_id_a])
    finding_b = relationship("Finding", foreign_keys=[finding_id_b])


class PipelineEvent(Base):
    """Log of each pipeline stage as it runs, so the UI can show live progress
    and so the run is auditable after the fact (traceability requirement)."""

    __tablename__ = "pipeline_events"

    id = Column(Integer, primary_key=True)
    topic_id = Column(Integer, ForeignKey("research_topics.id"), nullable=False)
    stage = Column(String(100), nullable=False)   # e.g. "search", "extract", "compare"
    message = Column(Text, nullable=False)
    created_at = Column(DateTime, default=utcnow)

    topic = relationship("ResearchTopic", back_populates="pipeline_events")
